# vibewords

./: .dockerignore  .gitignore  CLAUDE.md  DEV.md  Dockerfile  README.md  TODO.md  Taskfile.yml  config.yaml  pyproject.toml  requirements.txt
.claude/skills/commit-message/: SKILL.md
.claude/skills/new-feature/: SKILL.md
.github/workflows/: deploy.yml
config/: config-example.yaml
content/cryptics/: qube-cryptic-2025-12-17.ipuz  qube-cryptique-2026-06-02.ipuz  test.ipuz
examples/: french.xw  qube-cryptic-2026-06-02.puz
scripts/: guardian_to_ipuz.py  pre-commit  xw.py
src/vibeword/: config.py  grid_reconstructor.py  ipuz_parser.py  main.py
src/vibeword/scrapers/: fifteensquared.py  guardian.py  independent.py
src/vibewords/: cli.py  clue_format.py  config.py  connectors.py  crossword_model.py  grid_reconstructor.py  ipuz_parser.py  main.py  puz_parser.py  xw.lark  xw_parser.py
src/vibewords/scrapers/: __init__.py  fifteensquared.py  guardian.py  independent.py  local.py
static/: app.js  index.html  room.html  rooms.html  theme.css  theme.js
