[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "vibewords"
version = "0.3.9"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "pyyaml>=6.0",
    "lark>=1.1",
]

[project.scripts]
xw = "vibewords.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
